# tide

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: DESIGN.md
scripts/: run_eval.py
src/cairn/: __init__.py  campus.py  journey.py  personalize.py  travelers.py
src/tide/: __init__.py  campus.py  federated.py  guidance.py  journey.py  personalize.py  travelers.py
tests/: test_campus.py  test_federated.py  test_journey.py  test_personalize.py  test_travelers.py
web/: README.md  engine.js  index.html  main.js  style.css
