[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.1.0"
description = "An adaptive guidance system that helps people navigate overstimulating public spaces, one paced step at a time."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ananya Gupta", email = "ananyag1019@gmail.com" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
